RESOLVED FIXED270713
Fix edge cases of keyboard navigations around `anchor` elements
https://bugs.webkit.org/show_bug.cgi?id=270713
Summary Fix edge cases of keyboard navigations around `anchor` elements
Attachments
EWS
Comment 1 2024-03-12 05:48:14 PDT
Committed 275976@main (e39892e12f8d): <https://commits.webkit.org/275976@main> Reviewed commits have been landed. Closing PR #25607 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2024-03-12 05:49:15 PDT
Note You need to log in before you can comment on or make changes to this bug.