Fix edge cases of keyboard navigations around `anchor` elements with `TabsToLink`

https://bugs.webkit.org/show_bug.cgi?id=270713

Reviewed by Ryosuke Niwa.

This patch is to fix edge cases in keyboard focus navigation around
`anchor` elements:

Partial Merge: https://chromium.googlesource.com/chromium/blink/+/53f8eba14b6362795bae47c02236ca93303264a6

By merging above, WebKit is trying to fix case around `empty anchor`
while `TabsToLinks` enabled. The test case was failing currently in
WebKit, so this fixes it.

Merge: https://chromium.googlesource.com/chromium/blink/+/7ef69ef071ba2b49ece747b93518b9a1218f9c45

In this merge, WebKit is aligning to allow keyboard navigation to anchors
with `TabsToLinks` being disabled if the anchors have explicit tabindex.

Beside following, this patch still retains `early return` if it is not focusable.

> Changes:
* Source/WebCore/html/HTMLAnchorElement.cpp:
(HTMLAnchorElement::isKeyboardFocusable):

> Test Cases & Expectations:
* LayoutTests/fast/events/anchor-empty-focus-expected.txt:
* LayoutTests/fast/events/anchor-empty-focus.html:
* LayoutTests/fast/events/frame-tab-focus-expected.txt:
* LayoutTests/fast/events/frame-tab-focus.html:
* LayoutTests/fast/events/tab-focus-anchor-expected.txt:
* LayoutTests/fast/events/tab-focus-anchor-tab-to-links-expected.txt:
* LayoutTests/fast/events/tab-focus-anchor-tab-to-links.html:
* LayoutTests/fast/events/tab-focus-anchor.html:
* LayoutTests/fast/forms/focus-on-control-with-zero-size.html:
* LayoutTests/fast/forms/focus-on-control-with-zero-size-expected.txt:

> Platform Specific Test Expectation:
* LayoutTests/platform/ios/TestExpectations: `iOS` don't have 'EventSender` keydown support

Canonical link: https://commits.webkit.org/275976@main